WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308083
[iOS] AudioSession category incorrectly reset after pausing a media element that started playing while muted
https://bugs.webkit.org/show_bug.cgi?id=308083
Summary
[iOS] AudioSession category incorrectly reset after pausing a media element t...
Andy Estes
Reported
2026-02-17 14:58:42 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-17 14:58:50 PST
<
rdar://problem/170586419
>
Andy Estes
Comment 2
2026-02-17 15:05:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58875
EWS
Comment 3
2026-02-18 11:59:09 PST
Committed
307778@main
(0b6f4e7703f5): <
https://commits.webkit.org/307778@main
> Reviewed commits have been landed. Closing PR #58875 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug